Fixes #2337
Newly opened headline chat isn't hidden by default in fullscreen view

Also include some CSS fixes for fullscreen headlines boxes

--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -180,11 +180,6 @@
                 cursor: pointer;
                 padding-right: 0.5em;
             }
-            &.headline {
-                .chat-msg__body {
-                    margin-left: 0;
-                }
-            }
 
             .chat-msg__subject {
                 font-weight: bold;
